# Copyright (C) 2017 Chris Liebert

[package]
name = "rust-genbind-cmake_example"
version = "0.1.2"
authors = ["Chris Liebert <cbert745@gmail.com>"]
build = "build.rs"

[build-dependencies]
cmake = "0.1"
genbind = { path = '../..' }
examplelib = { path = '../library' }

[dependencies]
examplelib = { path = '../library' }
libc = "0.2.18"

[lib]
name = "cmake_example_tests"
path = "tests.rs"
